--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="./resources/css/reset.css">
+  <link rel="stylesheet" href="./resources/css/style.css">
 </head>
 <body>
   <!-- Header -->
   <header>
     <div class="content">
-      <a href="index.html" class="desktop logo">Fotomatic</a>
+      <a href="index.html" class="desktop logo">Fotomat</a>
       <nav class="desktop">
         <ul>
           <li><a href="#">Product detail</a></li>
@@ -55,7 +56,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="images/feature-1.png" />
+            <img src="resources/images/feature-1.png" />
           </div>
           <div class="content">
             <h2>Advanced, automatic, instant</h2>
@@ -66,7 +67,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="images/feature-2.png" />
+            <img src="resources/images/feature-2.png" />
           </div>
           <div class="content">
             <h2>Beautifully crafted inside-out</h2>
@@ -98,7 +99,7 @@
       </div>
     </div>
 
-    <!-- Quotes Section
+    <!-- Quotes Section -->
     <div id="quotes-section">
       <div class="content center">
         <span class="quote">“It’s truly something that could create a brand new photography Renaissance”</span>
